--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -12,3 +12,59 @@
   font-weight: 400;
   font-style: normal;
 }
+
+h1 {
+  font-size: 6rem;
+  color: black;
+  font-weight: 500;
+}
+h2{
+    font-size: 2rem;
+    color: black;
+  font-weight: 500;
+  &.--heading{
+    font-size: 6rem;
+  }
+}
+h3{
+  font-size: 6rem;
+  font-weight: 500;
+}
+h4{
+  font-size: 2rem;
+  font-weight: 400;
+}
+p{
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+li{
+  font-size: 4rem;
+  font-weight: 500;
+  color: $white;
+  text-transform: uppercase;
+  text-align: center;
+  width: fit-content;
+  cursor: pointer;
+  opacity: 1;
+  &:hover{
+    color: $red;
+  }
+}
+a{
+  text-decoration: none;
+  color: inherit;
+  :visited{
+    color: inherit;
+  }
+}
+span{
+  font-size: 1.25rem;
+  &.--heading{
+    font-weight: 500;
+  }
+}
+input{
+  font-size: 1rem;
+  font-weight: 400;
+}
