--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,13 +265,6 @@ input {
   height: auto;
 }
 
-ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .menu {
   font-size: 5rem;
   justify-content: center;
@@ -281,20 +274,42 @@ ul {
   width: 100dvw;
   height: 100dvh;
   opacity: 0;
-  transition: background-color 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
   pointer-events: none;
   display: flex;
-  background-color: transparent;
+  background-image: url("../images/menu-bg-sm.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media (min-width: 768px) {
+  .menu {
+    background-image: url("../images/menu-bg-md.png");
+  }
+}
+@media (min-width: 1280px) {
+  .menu {
+    background-image: url("../images/menu-bg-lg.png");
+  }
 }
 .menu.active {
-  background-color: black;
   opacity: 1;
   pointer-events: all;
 }
 .menu.inactive {
-  background-color: transparent;
   opacity: 0;
   pointer-events: none;
+}
+.menu .hidden {
+  display: none;
+}
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 body {
