--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .menu{
   font-size: 5rem;
   justify-content: center;
@@ -7,18 +9,38 @@
   width: 100dvw;
   height: 100dvh;
   opacity: 0;
-  transition: background-color 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
   pointer-events: none;
   display: flex;
-  background-color: transparent;
+  background-image: url('../images/menu-bg-sm.png');
+  @include breakpoint(md){
+    background-image: url('../images/menu-bg-md.png');
+  }
+  @include breakpoint(xl){
+    background-image: url('../images/menu-bg-lg.png');
+  }
+  background-size: cover;
+  background-repeat: no-repeat;
   &.active{
-    background-color: black;
     opacity: 1;
     pointer-events: all;
   }
   &.inactive{
-    background-color: transparent;
     opacity: 0;
     pointer-events: none;
+  }
+
+  .hidden{
+    display: none;
+  }
+
+  &__list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
 }
