--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -5,3 +5,9 @@ $breakpoints: (
         xl: 1280px,
         2xl: 1536px,
 );
+
+$z-header: 10;
+$z-cursor: 90;
+$z-cursor-icon: 91;
+$z-cursor-image: 92;
+$z-item-overlay: 100;
