--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,6 +311,59 @@ input {
   padding: 0;
   margin: 0;
 }
+.menu__list.categories .menu__item {
+  position: relative;
+  z-index: 1;
+}
+.menu__list.categories .menu__item:hover {
+  z-index: 100;
+  color: #FE0000;
+}
+
+.cursor {
+  width: 2rem;
+  aspect-ratio: 1;
+  position: fixed;
+  z-index: 90;
+  pointer-events: none;
+  background: none;
+  border: 1px solid #FE0000;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: width 0.3s ease, height 0.3s ease, background 0.3s ease, opacity 0.3s ease;
+  will-change: width, height, background, opacity;
+  top: 0 !important;
+  left: 0 !important;
+  transform-origin: center;
+}
+.cursor__image {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: none;
+  background-position: center;
+  width: 0;
+  height: 18rem;
+  filter: brightness(2);
+  z-index: 92;
+}
+.cursor__arrow {
+  z-index: 91;
+}
+
+.cursor--click:hover, .cursor--img:hover {
+  cursor: pointer;
+}
+
+body:has(.cursor--click:hover) .cursor {
+  width: 3rem;
+}
+
+body:has(.cursor--img:hover) .cursor {
+  width: 3rem;
+}
 
 body {
   background-color: #F8F9F3;
