--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Neucha&family=Playfair+Display:wght@400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&display=swap");
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -72,6 +72,7 @@ h4 {
 }
 
 p {
+  font-family: "Segoe UI", sans-serif;
   font-size: 1.25rem;
   font-weight: 400;
 }
@@ -98,10 +99,11 @@ a :visited {
   color: inherit;
 }
 
-span {
+td {
+  font-family: "Segoe UI", sans-serif;
   font-size: 1.25rem;
 }
-span.--heading {
+td.--heading {
   font-weight: 500;
 }
 
@@ -171,19 +173,8 @@ input {
   width: 100%;
   background-color: #F8F9F3;
   position: relative;
-  --rotate: 12deg;
-  --x: -50%;
-}
-.anim .logo::before {
-  content: "";
-  display: block;
-  width: 15%;
-  height: 25%;
-  position: absolute;
-  bottom: 12%;
-  right: 5%;
-  background-color: #F8F9F3;
-  z-index: -1;
+  --rotate: -12deg;
+  --x: -20%;
 }
 .anim .logo::after {
   content: "";
@@ -222,19 +213,8 @@ input {
   aspect-ratio: 1/1;
   width: var(--exit-width);
   position: relative;
-  --rotate: 12deg;
-  --x: -50%;
-}
-.header .logo::before {
-  content: "";
-  display: block;
-  width: 15%;
-  height: 25%;
-  position: absolute;
-  bottom: 12%;
-  right: 5%;
-  background-color: #F8F9F3;
-  z-index: -1;
+  --rotate: -12deg;
+  --x: -20%;
 }
 .header .logo::after {
   content: "";
@@ -270,7 +250,9 @@ input {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100dvw;
   height: 100dvh;
   opacity: 0;
@@ -318,6 +300,64 @@ input {
 .menu__list.categories .menu__item:hover {
   z-index: 100;
   color: #FE0000;
+}
+
+.single article {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .single article {
+    flex-direction: row;
+    padding: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .single article {
+    padding: 3rem 0;
+    max-width: 1400px;
+  }
+}
+.single__image {
+  height: 100%;
+  width: fit-content;
+  max-height: 800px;
+  min-width: 50%;
+}
+.single__image picture, .single__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.single__details {
+  max-width: 40%;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-auto-rows: 1fr min-content;
+}
+.single__details h2 {
+  margin-bottom: 2rem;
+}
+.single__details table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.single__details tr {
+  height: min-content;
+}
+.single__details tr td:first-child {
+  width: 10rem;
+}
+.single__details td {
+  height: min-content;
+  width: min-content;
+  padding: 2px 0;
 }
 
 .cursor {
@@ -372,11 +412,17 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+
+main {
+  margin-top: 128px;
+  margin-bottom: 128px;
+  display: grid;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
