--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -1,14 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Neucha&family=Playfair+Display:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&display=swap');
 
 @mixin playfair-display {
   font-family: 'Playfair Display', serif;
   font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-@mixin neucha {
-  font-family: "Neucha", cursive;
   font-weight: 400;
   font-style: normal;
 }
@@ -35,6 +29,7 @@ h4{
   font-weight: 400;
 }
 p{
+  font-family: "Segoe UI", sans-serif;
   font-size: 1.25rem;
   font-weight: 400;
 }
@@ -58,7 +53,8 @@ a{
     color: inherit;
   }
 }
-span{
+td{
+  font-family: "Segoe UI", sans-serif;
   font-size: 1.25rem;
   &.--heading{
     font-weight: 500;
