--- a/assets/sass/_single.scss
+++ b/assets/sass/_single.scss
@@ -16,15 +16,15 @@
     }
     @include breakpoint("lg"){
       padding: 3rem 0;
-      max-width: 1400px;
+      max-width: 1200px;
+      column-gap: 3rem;
     }
   }
 
   &__image{
     height: 100%;
-    width: fit-content;
     max-height: 800px;
-    min-width: 50%;
+    width: clamp(50%, fit-content, 100%);
     picture, img{
         width: 100%;
         height: 100%;
@@ -32,30 +32,80 @@
     }
   }
   &__details{
-    max-width: 40%;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-auto-rows: 1fr min-content;
+    //grid-auto-rows: 1fr min-content;
+    @include breakpoint("lg"){
+      max-width: 40%;
+    }
+  grid-template-areas: "title"
+                          "desc"
+                          "table";
+    grid-template-rows: min-content 1fr min-content;
 
     h2{
-      margin-bottom: 2rem;
+      grid-area: title;
+      margin-bottom: 1rem;
+      @include breakpoint("lg"){
+        margin-bottom: 2rem;
+      }
+    }
+    p{
+      grid-area: desc;
+      margin-bottom: 1rem;
+
+      @include breakpoint("lg"){
+        margin-bottom: 0;
+      }
     }
 
     table{
+      grid-area: table;
       width: 100%;
       border-collapse: collapse;
+      height: min-content;
+      align-self: end;
     }
     tr{
       height: min-content;
       td:first-child{
-        width: 10rem;
+        width: 12rem;
       }
     }
     td{
       height: min-content;
       width: min-content;
       padding: 2px 0;
+    }
+  }
+}
+
+.single.landscape{
+  article{
+    flex-direction: column;
+    max-width: 1200px;
+  }
+  .single__image{
+    margin-bottom: 1rem;
+    max-height: unset;
+    height: unset;
+    width: 100%;
+  }
+
+  .single__details{
+    max-width: 100%;
+    p{
+      margin-bottom: 1rem;
+      @include breakpoint("lg"){
+        margin-bottom: 0;
+      }
+    }
+
+
+    @include breakpoint("lg"){
+    grid-template-areas:"title desc"
+                        "table desc";
     }
   }
 }
