--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -34,8 +34,9 @@ h2{
   }
 }
 h3{
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: 500;
+  text-transform: uppercase;
 }
 h4{
   font-size: 2rem;
