--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,20 @@ input {
   border-radius: 0;
 }
 
+html {
+  font-size: 12px;
+}
+@media (min-width: 1024px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1280px) {
+  html {
+    font-size: 18px;
+  }
+}
+
 h1 {
   font-size: 6rem;
   color: black;
@@ -62,8 +76,9 @@ h2.--heading {
 }
 
 h3 {
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 h4 {
@@ -75,6 +90,7 @@ p {
   font-family: "Segoe UI", sans-serif;
   font-size: 1.25rem;
   font-weight: 400;
+  line-height: 1.25;
 }
 
 li {
@@ -208,6 +224,7 @@ input {
   position: fixed;
   overflow: hidden;
   top: 0;
+  z-index: 10;
 }
 .header .logo {
   aspect-ratio: 1/1;
@@ -244,6 +261,9 @@ input {
   width: 100%;
   height: auto;
 }
+.header h3 {
+  mix-blend-mode: difference;
+}
 
 .menu {
   font-size: 5rem;
@@ -259,6 +279,7 @@ input {
   transition: opacity 0.4s ease-in-out;
   pointer-events: none;
   display: flex;
+  z-index: 11;
   background-image: url("../images/menu-bg-sm.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -303,7 +324,7 @@ input {
 }
 
 .single article {
-  padding: 1rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -314,20 +335,20 @@ input {
 @media (min-width: 768px) {
   .single article {
     flex-direction: row;
-    padding: 2rem;
+    padding: 0 2rem;
   }
 }
 @media (min-width: 1024px) {
   .single article {
-    padding: 3rem 0;
-    max-width: 1400px;
+    padding: 0;
+    max-width: 1200px;
+    column-gap: 3rem;
   }
 }
 .single__image {
   height: 100%;
-  width: fit-content;
   max-height: 800px;
-  min-width: 50%;
+  width: clamp(50%, fit-content, 100%);
 }
 .single__image picture, .single__image img {
   width: 100%;
@@ -335,29 +356,155 @@ input {
   object-fit: contain;
 }
 .single__details {
-  max-width: 40%;
   width: 100%;
   height: 100%;
   display: grid;
-  grid-auto-rows: 1fr min-content;
+  grid-template-areas: "title" "desc" "table";
+  grid-template-rows: min-content 1fr min-content;
+}
+@media (min-width: 1024px) {
+  .single__details {
+    max-width: 40%;
+  }
 }
 .single__details h2 {
-  margin-bottom: 2rem;
+  grid-area: title;
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .single__details h2 {
+    margin-bottom: 2rem;
+  }
+}
+.single__details p {
+  grid-area: desc;
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .single__details p {
+    margin-bottom: 0;
+  }
 }
 .single__details table {
+  grid-area: table;
   width: 100%;
   border-collapse: collapse;
+  height: min-content;
+  align-self: end;
 }
 .single__details tr {
   height: min-content;
 }
 .single__details tr td:first-child {
-  width: 10rem;
+  width: 12rem;
 }
 .single__details td {
   height: min-content;
   width: min-content;
   padding: 2px 0;
+}
+
+.single.landscape article {
+  flex-direction: column;
+  max-width: 1200px;
+}
+.single.landscape .single__image {
+  margin-bottom: 1rem;
+  max-height: unset;
+  height: unset;
+  width: 100%;
+}
+.single.landscape .single__details {
+  max-width: 100%;
+}
+.single.landscape .single__details p {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .single.landscape .single__details p {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1024px) {
+  .single.landscape .single__details {
+    grid-template-areas: "title desc" "table desc";
+  }
+}
+
+.page-prace {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100dvw;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #000000;
+  z-index: -1;
+  background-image: url("../images/menu-bg-sm.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media (min-width: 768px) {
+  .page-prace {
+    background-image: url("../images/menu-bg-md.png");
+  }
+}
+@media (min-width: 1280px) {
+  .page-prace {
+    background-image: url("../images/menu-bg-lg.png");
+  }
+}
+.page-prace__item {
+  position: relative;
+  z-index: 1;
+}
+.page-prace__item:hover {
+  z-index: 100;
+  color: #FE0000;
+}
+
+.prace-archive {
+  display: flex;
+  flex-direction: column;
+  row-gap: 3rem;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+.prace-archive__row {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10%, 1fr));
+}
+.prace-archive__item {
+  overflow: hidden;
+}
+.prace-archive__item[data-shape=thin] {
+  grid-column: span 3;
+  grid-row: span 7;
+}
+.prace-archive__item[data-shape=square] {
+  grid-column: span 5;
+  grid-row: span 5;
+}
+.prace-archive__item[data-shape=wide] {
+  grid-column: span 7;
+  grid-row: span 4;
+}
+.prace-archive__item[data-shape=very-wide] {
+  grid-column: span 10;
+  grid-row: span 3;
+}
+.prace-archive__item:hover img {
+  transform: scale(1.05);
+}
+.prace-archive img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s;
 }
 
 .cursor {
@@ -419,7 +566,7 @@ body {
 }
 
 main {
-  margin-top: 128px;
+  margin-top: 192px;
   margin-bottom: 128px;
   display: grid;
   width: 100%;
