--- a/assets/sass/_single.scss
+++ b/assets/sass/_single.scss
@@ -2,7 +2,7 @@
 
 .single{
   article{
-    padding: 1rem;
+    padding: 0 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,10 +12,10 @@
 
     @include breakpoint('md'){
       flex-direction: row;
-      padding: 2rem;
+      padding: 0 2rem;
     }
     @include breakpoint("lg"){
-      padding: 3rem 0;
+      padding: 0;
       max-width: 1200px;
       column-gap: 3rem;
     }
