--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -507,6 +507,17 @@ input {
   transition: transform 0.3s;
 }
 
+.transition-box {
+  position: fixed;
+  width: 100dvw;
+  height: 100dvh;
+  left: 0;
+  top: 0;
+  z-index: 1000;
+  background-color: #000000;
+  transform: translateY(0%);
+}
+
 .cursor {
   width: 2rem;
   aspect-ratio: 1;
