--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,11 +2,14 @@
 @import "variables";
 @import "colors";
 @import "typography";
+
 @import "header";
 @import "menu";
 @import "single";
 @import "archive-prace";
 @import "katprace";
+@import "transition_box";
+
 @import "cursor";
 
 body{
