--- a/assets/sass/_cursor.scss
+++ b/assets/sass/_cursor.scss
@@ -1,5 +1,7 @@
+@import "mixins";
 .cursor{
   width: 2rem;
+  height: auto;
   aspect-ratio: 1;
   position: fixed;
   z-index: $z-cursor;
@@ -13,6 +15,10 @@
   top: 0!important;
   left: 0!important;
   transform-origin: center;
+  display: none;
+  @media (pointer: fine){
+    display: block;
+  }
 
   &__image{
     position: absolute;
@@ -30,22 +36,62 @@
     will-change: skewX, skew, filter, width, background-image;
   }
   &__arrow{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    opacity: 0;
     z-index: $z-cursor-icon;
+    transition: transform 0.3s ease;
+    svg{
+        width: 100%;
+        height: 100%;
+    }
+  }
+}
+
+body:has(div.menu.active:hover){
+  cursor: pointer;
+  .cursor{
+    &__arrow{
+      opacity: 1;
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
   }
 }
 
 
-.cursor--click:hover, .cursor--img:hover{
+.cursor--click:hover, .cursor--img:hover, a{
   cursor: pointer;
 }
-body:has(.cursor--click:hover){
+body:has(.cursor--click:hover), body:has(a:hover){
   .cursor{
     width: 3rem;
+    &__arrow{
+      opacity: 1;
+      transform: translate(-50%, -50%) rotate(0deg) !important;
+    }
   }
 }
 
 body:has(.cursor--img:hover){
   .cursor{
-    width: 3rem;
+    &__arrow{
+      opacity:0 !important;
+    }
   }
+}
+
+body:has(.menu__item.cursor--click:nth-child(even):hover){
+    .cursor{
+        &__arrow{
+        transform: translate(-50%, -50%) rotate(180deg) !important;
+        }
+    }
 }
