--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,9 +62,21 @@ html {
 }
 
 h1 {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   font-size: 6rem;
   color: black;
   font-weight: 500;
+}
+h1.--404 {
+  font-size: 15rem;
+}
+@media (min-width: 1024px) {
+  h1.--404 {
+    font-size: 20rem;
+  }
 }
 
 h2 {
@@ -95,6 +107,15 @@ h4 {
   font-weight: 400;
 }
 
+h6 {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 p {
   font-size: 1.25rem;
   font-weight: 400;
@@ -106,7 +127,7 @@ li {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 500;
   color: #F8F9F3;
   text-transform: uppercase;
@@ -114,9 +135,15 @@ li {
   width: fit-content;
   cursor: pointer;
   opacity: 1;
+  margin: 1rem 0;
 }
 li:hover {
   color: #FE0000;
+}
+@media (min-width: 768px) {
+  li {
+    font-size: 4rem;
+  }
 }
 
 a {
@@ -125,6 +152,15 @@ a {
 }
 a :visited {
   color: inherit;
+}
+a.back {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2rem;
+  text-decoration: underline;
+  text-transform: uppercase;
 }
 
 td {
@@ -593,6 +629,27 @@ input {
     background-position: 50% 0, 100% 0, 100% 100%, 0 100%;
   }
 }
+.errorPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  height: 50dvh;
+}
+.errorPage h1 {
+  line-height: 80%;
+  margin-top: -5rem;
+  margin-bottom: 5rem;
+}
+.errorPage h6 {
+  text-align: center;
+  line-height: 1.5;
+  max-width: 400px;
+}
+.errorPage .back {
+  margin-top: auto;
+}
+
 .cursor {
   width: 2rem;
   height: auto;
@@ -684,6 +741,10 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+* {
+  -webkit-tap-highlight-color: transparent;
 }
 
 main {
