--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -22,9 +22,16 @@ html{
 }
 
 h1 {
+  @include playfair-display;
   font-size: 6rem;
   color: black;
   font-weight: 500;
+  &.--404{
+    font-size: 15rem;
+    @include breakpoint("lg") {
+      font-size: 20rem;
+    }
+  }
 }
 h2{
     font-size: 2rem;
@@ -45,6 +52,11 @@ h4{
   font-size: 1.8rem;
   font-weight: 400;
 }
+h6{
+    @include playfair-display;
+    font-size: 1rem;
+    font-weight: 400;
+}
 p{
   font-size: 1.25rem;
   font-weight: 400;
@@ -52,7 +64,7 @@ p{
 }
 li{
   @include playfair-display;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 500;
   color: $white;
   text-transform: uppercase;
@@ -60,8 +72,12 @@ li{
   width: fit-content;
   cursor: pointer;
   opacity: 1;
+  margin: 1rem 0;
   &:hover{
     color: $red;
+  }
+  @include breakpoint("md") {
+    font-size: 4rem;
   }
 }
 a{
@@ -70,6 +86,13 @@ a{
   :visited{
     color: inherit;
   }
+  &.back{
+    @include playfair-display;
+    font-size: 2rem;
+    text-decoration: underline;
+    text-transform: uppercase;
+  }
+
 }
 td{
   font-size: 1.25rem;
