--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,11 @@ li:hover {
     font-size: 4rem;
   }
 }
+@media (min-width: 1024px) {
+  li {
+    margin: 0;
+  }
+}
 
 a {
   text-decoration: none;
@@ -170,9 +175,12 @@ td.--heading {
   font-weight: 500;
 }
 
-input {
+input, .form-field * {
   font-size: 1rem;
   font-weight: 400;
+  border: none;
+  background: none;
+  font-family: "Segoe UI", sans-serif;
 }
 
 :root {
@@ -436,6 +444,7 @@ input {
   width: 100%;
   height: 100%;
   display: grid;
+  column-gap: 1rem;
   grid-template-areas: "title" "desc" "table";
   grid-template-rows: min-content 1fr min-content;
 }
@@ -650,6 +659,136 @@ input {
   margin-top: auto;
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: clamp(50vh, 600px, 100vh);
+  width: 100%;
+  margin: 3rem auto 0 auto;
+  gap: 3rem;
+}
+@media (min-width: 1024px) {
+  .contact {
+    flex-direction: row;
+  }
+}
+.contact__decoration {
+  height: 100%;
+  width: 100%;
+  background-image: url("../images/hotline.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 90%;
+  justify-content: space-between;
+  padding-right: 3rem;
+}
+
+.form-field {
+  position: relative;
+  margin-bottom: 1.5rem;
+  width: 100%;
+}
+.form-field:has(.form-field__input.filled) .form-field__label, .form-field:has(.form-field__input:focus) .form-field__label {
+  transform: translate(-8px, -1rem) scale(0.8);
+}
+.form-field__label {
+  position: absolute;
+  display: block;
+  left: 4px;
+  top: 1rem;
+  color: rgba(0, 0, 0, 0.5);
+  transition: all 0.2s ease-in-out;
+}
+.form-field__input {
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  padding: 4px;
+}
+.form-field__input:focus {
+  outline: none;
+}
+.form-field__submit {
+  background: none;
+  border: none;
+  width: 100px;
+  height: 50px;
+  padding: 0;
+  align-self: end;
+  cursor: pointer;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  position: relative;
+}
+.form-field__submit .arrow {
+  display: block;
+  margin: 30px auto;
+  width: 15px;
+  height: 15px;
+  border-top: 2px solid #000;
+  border-left: 2px solid #000;
+  transform: rotate(135deg);
+  position: absolute;
+  right: 32px;
+  transition: all 0.3s;
+}
+.form-field__submit .arrow::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 2px;
+  height: 70px;
+  background-color: black;
+  transform: rotate(-45deg) translate(24px, 8px);
+  transition: transform 0.3s;
+}
+.form-field__submit:hover .arrow::after {
+  transform: rotate(-45deg) translate(24px, 16px) scaleY(1.2);
+}
+.form-field__submit:hover .arrow {
+  right: 2px;
+}
+
+.footer {
+  width: 100%;
+  margin-bottom: 0;
+  background-color: rgba(254, 0, 0, 0.05);
+}
+
+.lang {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+}
+.lang .lang__item {
+  font-size: 1rem;
+  width: 3rem;
+  height: 3rem;
+  position: relative;
+}
+.lang .lang__item.active span {
+  text-decoration: underline;
+}
+.lang .lang__item span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #F8F9F3;
+}
+
 .cursor {
   width: 2rem;
   height: auto;
@@ -657,7 +796,6 @@ input {
   position: fixed;
   z-index: 90;
   pointer-events: none;
-  background: none;
   border: 1px solid #FE0000;
   border-radius: 50%;
   transform: translate(-50%, -50%);
@@ -667,6 +805,7 @@ input {
   left: 0 !important;
   transform-origin: center;
   display: none;
+  background-color: transparent;
 }
 @media (pointer: fine) {
   .cursor {
@@ -741,6 +880,14 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  min-height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+
+body:has(.menu.active) {
+  overflow: hidden !important;
 }
 
 * {
@@ -748,11 +895,13 @@ body {
 }
 
 main {
+  box-sizing: border-box;
   margin-top: 10rem;
-  margin-bottom: 128px;
   display: grid;
   width: 100%;
   padding: 1rem 2rem;
+  min-height: calc(100dvh - 10rem);
+  min-width: 100dvw;
 }
 
 /*# sourceMappingURL=style.css.map */
