--- a/assets/sass/_single.scss
+++ b/assets/sass/_single.scss
@@ -35,11 +35,12 @@
     width: 100%;
     height: 100%;
     display: grid;
-    //grid-auto-rows: 1fr min-content;
+    column-gap: 1rem;
+
     @include breakpoint("lg"){
       max-width: 40%;
     }
-  grid-template-areas: "title"
+    grid-template-areas: "title"
                           "desc"
                           "table";
     grid-template-rows: min-content 1fr min-content;
