--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,9 +395,11 @@ input, .form-field * {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: min-content;
   list-style: none;
   padding: 0;
   margin: 0;
+  position: relative;
 }
 .menu__list.categories .menu__item {
   position: relative;
@@ -765,12 +767,14 @@ input, .form-field * {
 }
 
 .lang {
-  margin-top: 4rem;
+  position: absolute;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   column-gap: 1rem;
+  top: 100%;
+  margin-top: 3rem;
 }
 .lang .lang__item {
   font-size: 1rem;
