--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -42,9 +42,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: min-content;
     list-style: none;
     padding: 0;
     margin: 0;
+    position: relative;
   }
 
   &__list.categories{
