--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,7 @@ input, .form-field * {
 
 .header {
   height: auto;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -286,6 +286,11 @@ input, .form-field * {
   overflow: hidden;
   top: 0;
   z-index: 10;
+}
+@media (min-width: 768px) {
+  .header {
+    padding: 1rem 2rem;
+  }
 }
 .header .logo {
   aspect-ratio: 1/1;
