--- a/assets/sass/_contact.scss
+++ b/assets/sass/_contact.scss
@@ -8,7 +8,7 @@ $halfBlack: transparentize($black, 0.5);
   height: clamp(50vh, 600px, 100vh);
   width: 100%;
   //max-width: 1400px;
-  margin: 3rem auto 0 auto;
+  margin: 0 auto;
   gap: 3rem;
 
   @include breakpoint(lg){
@@ -30,11 +30,14 @@ $halfBlack: transparentize($black, 0.5);
   width: 100%;
   height: 90%;
   justify-content: space-between;
-  padding-right: 3rem;
+  padding: 0 1rem;
+  @include breakpoint(lg){
+    padding-right: 3rem;
+  }
+  row-gap: 1.5rem;
 }
 .form-field{
   position: relative;
-  margin-bottom: 1.5rem;
   width: 100%;
 
   &:has(.form-field__input.filled), &:has(.form-field__input:focus){
