--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -3,4 +3,7 @@
   width: 100%;
   margin-bottom: 0;
   background-color: transparentize($red, 0.95);
+  @include breakpoint(lg){
+    padding-bottom: 0;
+  }
 }
