--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,10 +80,6 @@ h1.--404 {
 }
 
 h2 {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
   font-size: 1.8rem;
   color: black;
   font-weight: 400;
@@ -433,7 +429,7 @@ input, .form-field * {
   .single article {
     grid-template-rows: 1fr;
     grid-template-columns: 3fr 2fr;
-    padding: 0 2rem;
+    padding: 0;
   }
 }
 @media (min-width: 1024px) {
@@ -508,7 +504,7 @@ input, .form-field * {
   .single.landscape article {
     grid-template-rows: repeat(2, min-content);
     grid-template-columns: 1fr;
-    padding: 0 2rem;
+    padding: 0;
   }
 }
 .single.landscape .single__image {
