--- a/assets/sass/_single.scss
+++ b/assets/sass/_single.scss
@@ -12,7 +12,8 @@
     @include breakpoint('md'){
       grid-template-rows: 1fr;
       grid-template-columns: 3fr 2fr;
-      padding: 0 2rem;
+      //padding: 0 2rem;
+      padding: 0;
     }
     @include breakpoint("lg"){
       padding: 0;
@@ -92,7 +93,8 @@
     @include breakpoint('md'){
       grid-template-rows: repeat(2, min-content);
       grid-template-columns: 1fr;
-      padding: 0 2rem;
+      //padding: 0 2rem;
+      padding: 0;
     }
   }
   .single__image{
