--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&display=swap");
 *, *:before, *:after {
   box-sizing: border-box;
@@ -877,6 +878,45 @@ input, .form-field * {
   background-color: #000000;
 }
 
+.alert {
+  position: fixed;
+  top: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
+.alert--success {
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+  color: #155724;
+}
+.alert--success .alert-icon::before {
+  content: "✓";
+}
+.alert--error {
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  color: #721c24;
+}
+.alert--error .alert-icon::before {
+  content: "!";
+}
+.alert .alert-icon {
+  font-size: 1.5rem;
+  margin-right: 1rem;
+  transform: translateY(2px);
+}
+.alert .alert-message {
+  font-size: 1.25rem;
+  margin-top: 4px;
+}
+
 .cursor {
   width: 2rem;
   height: auto;
@@ -928,7 +968,7 @@ input, .form-field * {
   display: flex;
   opacity: 0;
   z-index: 92;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease 0s, opacity 0.2s ease 0s;
 }
 .cursor__arrow svg {
   width: 100%;
@@ -947,10 +987,10 @@ body:has(div.menu.active:hover) .cursor__arrow {
   cursor: pointer;
 }
 
-body:has(.cursor--click:hover) .cursor, body:has(a:hover) .cursor {
+body:has(.cursor--click:hover, a:hover) .cursor {
   width: 3rem;
 }
-body:has(.cursor--click:hover) .cursor__arrow, body:has(a:hover) .cursor__arrow {
+body:has(.cursor--click:hover, a:hover) .cursor__arrow {
   opacity: 1;
   transform: translate(-50%, -50%) rotate(0deg) !important;
 }
