--- a/assets/sass/_cursor.scss
+++ b/assets/sass/_cursor.scss
@@ -48,7 +48,7 @@
     display: flex;
     opacity: 0;
     z-index: $z-cursor-icon;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease 0s, opacity 0.2s ease 0s;
     svg{
         width: 100%;
         height: 100%;
@@ -70,7 +70,7 @@ body:has(div.menu.active:hover){
 .cursor--click:hover, .cursor--img:hover, a{
   cursor: pointer;
 }
-body:has(.cursor--click:hover), body:has(a:hover){
+body:has(.cursor--click:hover, a:hover){
   .cursor{
     width: 3rem;
     &__arrow{
