--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -749,14 +749,18 @@ input, .form-field * {
   justify-content: right;
   align-items: center;
   position: relative;
+  --arrow-color: rgba(0,0,0,1);
+}
+.form-field__submit[disabled] {
+  --arrow-color: rgba(0,0,0,0.3);
 }
 .form-field__submit .arrow {
   display: block;
   margin: 30px auto;
   width: 15px;
   height: 15px;
-  border-top: 2px solid #000;
-  border-left: 2px solid #000;
+  border-top: 2px solid var(--arrow-color);
+  border-left: 2px solid var(--arrow-color);
   transform: rotate(135deg);
   position: absolute;
   right: 32px;
@@ -768,15 +772,33 @@ input, .form-field * {
   display: block;
   width: 2px;
   height: 70px;
-  background-color: black;
+  background-color: var(--arrow-color);
   transform: rotate(-45deg) translate(24px, 8px);
   transition: transform 0.3s;
 }
-.form-field__submit:hover .arrow::after {
+.form-field__submit:not([disabled]):hover .arrow::after {
   transform: rotate(-45deg) translate(24px, 16px) scaleY(1.2);
 }
-.form-field__submit:hover .arrow {
+.form-field__submit:not([disabled]):hover .arrow {
   right: 2px;
+}
+.form-field__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.form-field__row .links {
+  display: flex;
+  gap: 1rem;
+}
+.form-field__row .links a {
+  transition: color 0.2s ease;
+}
+.form-field__row .links:has(a:hover) a:not(:hover) {
+  opacity: 0.6;
+}
+.form-field__row .links i {
+  font-size: 2rem;
 }
 
 .footer {
@@ -968,13 +990,25 @@ input, .form-field * {
   display: flex;
   opacity: 0;
   z-index: 92;
-  transition: transform 0.3s ease 0s, opacity 0.2s ease 0s;
+  transition: transform 0.3s ease 0s, opacity 0.2s ease 0s, scale 0.2s ease 0s;
 }
 .cursor__arrow svg {
   width: 100%;
   height: 100%;
 }
+.cursor.loading .cursor__arrow {
+  opacity: 1;
+  animation: rotate-loader infinite 1s ease-in-out;
+}
 
+@keyframes rotate-loader {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg) scale(0.95);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg) scale(1.05);
+  }
+}
 body:has(div.menu.active:hover) {
   cursor: pointer;
 }
