--- a/assets/sass/_language-selector.scss
+++ b/assets/sass/_language-selector.scss
@@ -1,18 +1,22 @@
 .lang{
-  position: absolute;
+  //position: absolute;
+  //bottom: 50px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   column-gap: 1rem;
-  top: 100%;
-  margin-top: 3rem;
 
     .lang__item{
-      font-size: 1rem;
-      width: 3rem;
-      height: 3rem;
+      font-size: 1.5rem;
+      width: 4rem;
+      height: 4rem;
       position: relative;
+      @include breakpoint(lg){
+        font-size: 1rem;
+        width: 3rem;
+        height: 3rem;
+      }
 
       &.active{
         span{
@@ -28,4 +32,27 @@
         color: $white;
       }
     }
+}
+
+.header .lang{
+  position: absolute;
+  column-gap: 0;
+  width: 100%;
+  right: 1px;
+  label{
+    flex-basis: 100%;
+    height: 1.75rem;
+    &:not(.active){
+      opacity: 0.7;
+    }
+  }
+  span{
+    text-transform: lowercase;
+    color: $black;
+  }
+}
+
+.position--bottom{
+  position: absolute;
+  bottom: 3rem;
 }
