--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -3,6 +3,7 @@
 .menu{
   font-size: 5rem;
   justify-content: center;
+  display: flex;
   align-items: center;
   flex-direction: column;
   position: fixed;
@@ -13,7 +14,6 @@
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
   pointer-events: none;
-  display: flex;
   z-index: $z-menu;
   background-image: url('../images/menu-bg-sm.png');
   @include breakpoint(md){
@@ -45,8 +45,11 @@
     height: min-content;
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 0 4rem 0;
     position: relative;
+    @include breakpoint(lg){
+      margin: 0;
+    }
   }
 
   &__list.categories{
